Fix right padding when retry button visible in default and slide themes

--- a/sass/offline-theme-default.sass
+++ b/sass/offline-theme-default.sass
@@ -60,3 +60,6 @@
                 border-top-color: $darkYellow
                 border-left-color: $darkYellow
                 opacity: 0.7
+
+        &.offline-ui-waiting
+            padding-right: 11em
