--- a/sass/offline-theme-slide.sass
+++ b/sass/offline-theme-slide.sass
@@ -59,3 +59,6 @@
                 border-top-color: $darkYellow
                 border-left-color: $darkYellow
                 opacity: 0.7
+
+        &.offline-ui-waiting
+            padding-right: 11em
